--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 }
 </script>
 </head>
-<body class="bg-gradient-to-br from-gray-900 via-purple-900 to-gray-900">
+<body class="bg-gray-900">
   <app-root></app-root>
 </body>
 </html>
