feat: Migrate to Vite and Angular 18
Replaces the Angular CLI build system with Vite for faster build times and improved developer experience. Updates Angular dependencies to version 18 and configures Zoneless Change Detection for performance. Adds Netlify build configuration for deployment.

--- a/index.html
+++ b/index.html
@@ -19,12 +19,14 @@
     "@angular/compiler": "https://esm.sh/@angular/compiler@^21.1.2?external=rxjs",
     "@angular/platform-browser": "https://esm.sh/@angular/platform-browser@^21.1.2?external=rxjs",
     "@angular/core": "https://esm.sh/@angular/core@^21.1.2?external=rxjs",
-    "@angular/common": "https://esm.sh/@angular/common@^21.1.2?external=rxjs"
+    "@angular/common": "https://esm.sh/@angular/common@^21.1.2?external=rxjs",
+    "vite": "https://esm.sh/vite@^7.3.1?external=rxjs"
   }
 }
 </script>
 </head>
 <body class="bg-gray-900">
   <app-root></app-root>
+  <script type="module" src="/src/main.ts"></script>
 </body>
 </html>
